Fix list styles and add appropriate gap between lis

--- a/css/partials/_organization-collection-view.sass
+++ b/css/partials/_organization-collection-view.sass
@@ -1,5 +1,8 @@
 #organization-list
-  li 
-    list-style: none
-    margin-bottom: 0.5em
-    margin-top: 0.5em
+  ul 
+    padding-left: 0
+    
+    li 
+      list-style    : none
+      margin-bottom : 0.75em
+      margin-top    : 0.75em
