--- a/css/partials/bootstrap/_variables.scss
+++ b/css/partials/bootstrap/_variables.scss
@@ -759,7 +759,7 @@ $thumbnail-caption-padding:   9px !default;
 //
 //##
 
-$well-bg:                     #f5f5f5 !default;
+$well-bg:                     #fefefe !default;
 $well-border:                 darken($well-bg, 7%) !default;
 
 
